# mock-api

./: .gitignore  Cargo.toml  README.md  grammar.md
example/: Pipfile  stock_codes.txt  stock_daily_OCHL_mock.py  stock_daily_OCHL_mock1.py  stress_test_stock_daily.py  stress_test_stock_daily1.py
prompt/: p1.txt
src/: api-doc.html  cache.rs  handlers.rs  helpers.rs  llm.rs  main.rs  schema.rs  web_server.old.rs  web_server.rs
src/llm/: example_prompt.txt  query.rs
src/templates/: new_project.html
src/web_server/: helpers.rs  thread_pool.unused.rs  types.rs
