[package]
name = "mockapi"
version = "0.2.1"
edition = "2021"

[dependencies]
tempfile = "3.3.0"
temp-env = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "1.7.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.93"
